2000-12-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.3.6
	* fixed show print button in studypad
	

2000-12-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.3.5
	* split GnomeSword.cpp into gs_sword.cpp and gs_gnomesword.c
	* split GnomeSword.h into gs_sword.h and gs_gnomesword.h


2000-12-04 Terry Biggs <tbiggs@users.sourceforge.net>

	*release 0.3.4
	*scroll bug fixed in display.cpp - thanks to Gregg Berg
	for finding and fixing this bug.
	

2000-11-20 Terry Biggs <tbiggs@users.sourceforge.net>
	
	*release 0.3.2
	*fixed crash with seg fault on initial startup after build,
	 thanks to Fred Smith <fredex@fcshome.stoneham.ma.us> 
	 for finding and fixing this bug.
	 

2000-11-14 Terry Biggs <tbiggs@users.sourceforge.net>

	*separate initSword() and initGnomeSword()
	

2000-11-09 Terry Biggs <tbiggs@users.sourceforge.net>
	
	*add a configuration option for the shortcut bar
		show history group



2000-11-9  Terry Biggs <tbiggs@users.sourceforge.net>
	
	*release 0.3.0
	*requires sword-1.5.1a
	*requires gnome-print-0.20 or higher
	*add some configuration options for the shortcut bar
		show commentary group
		show dictionary group


2000-10-12  Terry Biggs <tbiggs@users.sourceforge.net>

	*removed reference to unknown includes
	#include  <widgets/e-paned/e-hpaned.h/>
	#include  <widgets/e-paned/e-vpaned.h/>
	in GnomeSword.cpp, callback.cpp and interface.c
	changed to 
	#include  <widgets/e-paned/e-hpaned.h>
	#include  <widgets/e-paned/e-vpaned.h>


2000-10-05  Terry Biggs <tbiggs@users.sourceforge.net>

	*release 0.2.5

2000-10-03  Terry Biggs <tbiggs@users.sourceforge.net>
	
	*added history group to shortcut bar

2000-09-29  Terry Biggs <tbiggs@users.sourceforge.net>
	
	*patch supplied by Chad Thomas <cbthomas@students.uiuc.edu>
	to allow lookup of Strongs numbers in dict/lex text by
	double clicking the number.

2000-09-27  Terry Biggs <tbiggs@users.sourceforge.net>
        
        *changed panes to e-panes from the evolution package
