@@ -1,3 +1,13 @@
+2000-12-06 Terry Biggs <tbiggs@users.sourceforge.net> 
+
+	* shortcut bar bug fixed	
+	panesize = e_paned_get_position(E_PANED(lookup_widget(MainFrm,"epaned")));
+        if(panesize > 0 )
+        {
+        	settings->shortcutbarsize = panesize;
+        	return true;
+        }
+
 2000-12-06 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* release 0.3.6
